# Python-Logistics

./: README.md  Readme.md  driversList.json  guitest.py  main.py  payloadList.json  pyproject.toml  requirements.txt  tempCodeRunnerFile.py  test.js  truckList.json
Modules/: DeliveryTruck.py  Destination.py  Driver.py  DriversList.py  GoogleMaps.py  Gpt.py  Payload.py  PayloadAlive.py  PayloadAnimal.py  PayloadDangerous.py  PayloadList.py  PayloadRegular.py  PriceList.py  Transit.py  Truck.py  TruckList.py  tempCodeRunnerFile.py  test.py  truckList.py
Modules/Abstract/: APayload.py  AVehicle.py
Modules/GUI/: GetLastElements.py  TruckChooserApp.py  guitest.py
Modules/GUI/pages/: AddDriverWindow.py  AddPayloadWindow.py  AddTruckWindow.py  CalculationPage.py  DriverManager.py  Info.py  PayloadManager.py  SelectBaseInfo.py  SelectDestination.py  SelectDriverAndTruck.py  TruckManager.py
