[tool.poetry]
name = "anairo"
version = "0.1.0"
description = ""
authors = ["szymonkonopek <sk.gornik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
openai = "^1.2.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
